# prediction-arb-bot

./: .gitignore  Cargo.toml
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/network/: websocket.rs
